infra/network/allow-app-egress-to-otel.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-app-egress-to-otel
  namespace: app
spec:
  endpointSelector:
    matchLabels:
      app: f1-backend

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app: opentelemetry-collector
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
